Add html structure (index.html, dd contacts html)
Разметили 1-ю страницу и добавили 2-ю страницу "контакты"

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,3 +1,41 @@
-hello, world!
-First change
-New change
+<!doctype html>
+<html>
+  <head lang="ru">
+    <meta charset="utf8">
+    <!-- заголовок документа -->
+    <title>Проект номер 1</title>
+  </head>
+  <body>
+    <!-- тело документа -->
+    <header>
+      <h1>Название страницы</h1>
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="new file.html">Контакты</a>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <h2>Название контента</h2>
+        <nav>
+          <a href="#article-1">Первая статья</a>
+            <a href="#article-2">Вторая статья</a>
+        </nav>
+        <article id="article-1">
+          <h3>Заголовок первой статьи</h3>
+          <a href="http://www.migip.ru/" target="_blank">ссылка на мигип</a>
+          <p>Во втором, переработанном и дополненном, издании практикума (предыдущее вышло в 2003 г.), подготовленном коллективом специалистов во главе с профессором И. С. Клециной, представлены методические разработки практических и семинарских занятий <strong>по гендерной психологии</strong>. <em>Практикум</em> предназначен для подготовки студентов гуманитарных, технических и естественнонаучных направлений в области гендерной психологии и других гендерно–ориентированных дисциплин.</p>
+
+          <p>Данное <b>практическое пособие</b> адресовано преподавателям высших учебных заведений, читающим курсы и спецкурсы по <i>гендерной тематике</i>, исследователям, аспирантам, студентам и всем тем, кто интересуется гендерной проблематикой или хотел бы с ней познакомиться.</p>
+        </article>
+        <article id="article-2">
+          <h3>Заголовок второй статьи</h3>
+          <p>Все права защищены. Никакая часть данной книги не может быть воспроизведена в какой бы то ни было форме без письменного разрешения владельцев авторских прав.</p>
+          <a href="https://www.litmir.me/bd/?b=112144" target="blank">ссылка на книгу<a/>
+            </article>
+      <a href="tel:+79260983241">Позвони мне</a>
+      </section>
+    </main>
+  </body>
+</html>
