Added My Article
Added 'My article', corrected some mistakes in 'Index' and 'Contacts'

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -11,7 +11,8 @@
       <h1>Название страницы</h1>
       <nav>
         <a href="index.html">Главная</a>
-        <a href="new file.html">Контакты</a>
+        <a href="contacts.html">Контакты</a>
+        <a href="article.html">Моя статья</a>
       </nav>
     </header>
 
@@ -20,7 +21,7 @@
         <h2>Название контента</h2>
         <nav>
           <a href="#article-1">Первая статья</a>
-            <a href="#article-2">Вторая статья</a>
+          <a href="#article-2">Вторая статья</a>
         </nav>
         <article id="article-1">
           <h3>Заголовок первой статьи</h3>
