Added article 2 & some styling
Positioning Header/Nav; added fonts, article 2 . Work with paddings, margins, etc.

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,19 +4,20 @@
     <meta charset="utf8">
     <!-- заголовок документа -->
     <title>Проект номер 1</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- тело документа -->
     <header>
       <h1>Название страницы</h1>
-      <nav>
+      <nav class="navigationpane">
         <a href="index.html">Главная</a>
         <a href="contacts.html">Контакты</a>
         <a href="article.html">Моя статья</a>
+        <a href="article-2.html">Моя вторая статья</a>
       </nav>
-    </header>
-
-    <main>
+      <main>
       <section>
         <h2>Название контента</h2>
         <nav>
@@ -24,19 +25,30 @@
           <a href="#article-2">Вторая статья</a>
         </nav>
         <article id="article-1">
-          <h3>Заголовок первой статьи</h3>
+          <h3 class="heading yellow">Заголовок первой статьи</h3>
           <a href="http://www.migip.ru/" target="_blank">ссылка на мигип</a>
           <p>Во втором, переработанном и дополненном, издании практикума (предыдущее вышло в 2003 г.), подготовленном коллективом специалистов во главе с профессором И. С. Клециной, представлены методические разработки практических и семинарских занятий <strong>по гендерной психологии</strong>. <em>Практикум</em> предназначен для подготовки студентов гуманитарных, технических и естественнонаучных направлений в области гендерной психологии и других гендерно–ориентированных дисциплин.</p>
 
           <p>Данное <b>практическое пособие</b> адресовано преподавателям высших учебных заведений, читающим курсы и спецкурсы по <i>гендерной тематике</i>, исследователям, аспирантам, студентам и всем тем, кто интересуется гендерной проблематикой или хотел бы с ней познакомиться.</p>
+
         </article>
         <article id="article-2">
-          <h3>Заголовок второй статьи</h3>
+          <h3 class="heading green">Заголовок второй статьи</h3>
           <p>Все права защищены. Никакая часть данной книги не может быть воспроизведена в какой бы то ни было форме без письменного разрешения владельцев авторских прав.</p>
-          <a href="https://www.litmir.me/bd/?b=112144" target="blank">ссылка на книгу<a/>
-            </article>
+          <a href="https://www.litmir.me/bd/?b=112144" target="blank">ссылка на книгу</a>
+        </article>
+
       <a href="tel:+79260983241">Позвони мне</a>
+
       </section>
+      <aside>
+        <h4>Это футер</h4>
+      </aside>
     </main>
+
+    <footer class="footer">
+      <p>этофутер
+    </footer>
+
   </body>
 </html>
