--- a/Article.html
+++ b/Article.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
     <!--далее идет заголовок документа-->
     <title>Проект номер 1</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   <!--далее идет тело документа-->
     <header>
       <h1>Название страницы</h1>
-      <nav>
+        <nav class="navigationpane">
         <a href="index.html">Главная</a>
         <a href="contacts.html">Контакты</a>
         <a href="article.html">Моя статья</a>
+        <a href="article two.html">Моя вторая статья</a>
       </nav>
     </header>
 
@@ -21,7 +24,7 @@
        <h2>"Пятиминутка самораскрытия" или серия зарисовок "мне обо мне"</h2>
         <article>
          <h3>Зарисовка первая. О чем молчат защиты </h3>
-          <p>На одном из обучающих семинаров по телесной психотерапии в рамках <a href="http://www.bioenergeticanalysis.ru/" target="blank">биоэнергетического анализа Александра Лоуэна</a> мы говорили о <strong>травме орального периода развития</strong>/оральной структуре характера <a href="http://www.psychol-ok.ru/lib/johnson_s/ph/ph_07.html" target="blank">(Стивен М. Джонсон)</a>. <b>Нарушение привязанности</b> (эмоциональная покинутость) формирует полярность у ребенка: потребность в контакте, близости и принятии, с одной стороны, поддерживает тенденцию к прилипанию к другим людям, с другой - из-за страха вновь быть покинутым и вновь испытать боль одиночества вызывает усиление изолированности и отказ от отношений. </p>
+          <p>На одном из обучающих семинаров по телесной психотерапии в рамках <a href="http://www.bioenergeticanalysis.ru/" target="blank">биоэнергетического анализа Александра Лоуэна</a> мы говорили о <strong>травме орального периода развития</strong>/оральной структуре характера <a ref="http://www.psychol-ok.ru/lib/johnson_s/ph/ph_07.html" target="blank">(Стивен М. Джонсон)</a>. <b>Нарушение привязанности</b> (эмоциональная покинутость) формирует полярность у ребенка: потребность в контакте, близости и принятии, с одной стороны, поддерживает тенденцию к прилипанию к другим людям, с другой - из-за страха вновь быть покинутым и вновь испытать боль одиночества вызывает усиление изолированности и отказ от отношений. </p>
 
           <p>Как это работает на практике:</P>
 
