--- a/Contacts.html
+++ b/Contacts.html
@@ -4,18 +4,23 @@
   <meta charset=utf-8">
 
 <title>Проект номер 1</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=cyrillic" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <header>
-    <h1>Контакты</h1>
-    <nav>
+    <h1>Название страницы</h1>
+    <nav class="navigationpane">
       <a href="index.html">Главная</a>
       <a href="contacts.html">Контакты</a>
       <a href="article.html">Моя статья</a>
+      <a href="article two.html">Моя вторая статья</a>
     </nav>
   </header>
-
+  <footer class="footer">
+    <p>этофутер
+  </footer>
 </body>
 </html>
