--- a/Components.html
+++ b/Components.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Components</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
 
   <div class="font">
     <h2 class="text-shadow">Заголовок</h2>
-    
+
     <p class="font-size">Данное <b>практическое пособие</b> адресовано преподавателям высших учебных заведений, читающим курсы и спецкурсы по <i>гендерной тематике</i>, исследователям, аспирантам, студентам и всем тем, кто интересуется гендерной проблематикой или хотел бы с ней познакомиться.</p>
 
     <p class="font-weight">Данное <b>практическое пособие</b> адресовано преподавателям высших учебных заведений, читающим курсы и спецкурсы по <i>гендерной тематике</i>, исследователям, аспирантам, студентам и всем тем, кто интересуется гендерной проблематикой или хотел бы с ней познакомиться.</p>
@@ -34,5 +35,52 @@
 
     <p class="font-variant">Данное <b>практическое пособие</b> адресовано преподавателям высших учебных заведений, читающим курсы и спецкурсы по <i>гендерной тематике</i>, исследователям, аспирантам, студентам и всем тем, кто интересуется гендерной проблематикой или хотел бы с ней познакомиться.</p>
   </div>
+
+  <div class="flex-container">
+
+    <div class="flex-element flex-element-1">test1</div>
+    <div class="flex-element flex-element-2">test2</div>
+    <div class="flex-element flex-element-3">test3</div>
+    <div class="flex-element flex-element-4">test4</div>
+    <div class="flex-element flex-element-5">test5</div>
+
+  </div>
+
+<div class="box-shadow"></div>
+
+<div class="box-shadow-inset"></div>
+
+<div class="calc-parent">
+  <div class="calc-child"></div>
+  <div class="calc-child>"></div>
+</div>
+
+<div class="hover"></div>
+
+<a class="link-hover" href="#">ссылка</a>
+
+<br>
+
+<input class="focus" type="text" value="Катя Сава" placeholder="Имя и Фамилия">
+<input class="focus" type="password" placeholder="Пароль">
+
+<div class="pseudo-classes-parent">
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+  <div class="pseudo-classes-child"></div>
+</div>
+
+<p class="pseudoelements">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque labore cum nobis, culpa dicta laborum dolor commodi, optio possimus repudiandae maiores numquam doloribus distinctio, repellendus cupiditate ex veritatis necessitatibus. Vero.</p>
+
+<div class="transition-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+
+<div class="transition-left"></div>
 </body>
 </html>
