--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -46,7 +46,7 @@
       </section>
 
       <aside class="aside">
-        <h4 class="aside header"></h4>
+        <h4 class="aside header">Это заголовок Эсайд</h4>
         <nav class="aside_nav">
           <a href="article.html" class="aside__nav-link">Моя первая статья</a>
         </nav>
